--- a/drivers/input/serio/Kconfig
+++ b/drivers/input/serio/Kconfig
@@ -209,6 +209,15 @@ config SERIO_XILINX_XPS_PS2
 	  To compile this driver as a module, choose M here: the
 	  module will be called xilinx_ps2.
 
+config SERIO_PITON_PS2 
+	tristate "Piton PS/2 Controller Support"
+	help
+	  This driver supports XPS PS/2 IP from the Xilinx EDK on
+	  PowerPC platform.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called piton_ps2.
+
 config SERIO_ALTERA_PS2
 	tristate "Altera UP PS/2 controller"
 	depends on HAS_IOMEM
